--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,35 +21,29 @@ repos:
         name: ruff-errors
         args: ["--config=pyproject.toml"]
 
-      - id: ruff-check
-        name: ruff-imports
-        args: ["--fix", "--select", "I", "--exit-zero"]
-        verbose: true
-
       # Hook 2: "WARNING" (non-blocking) - luôn pass
       - id: ruff-check
         name: ruff-warnings
         args: ["--select", "E501", "--exit-zero"]  # --exit-zero → luôn exit code = 0
         verbose: true
+      
+      - id: ruff-check
+        name: ruff-imports
+        args: ["--fix", "--select", "I", "--exit-zero"]
+        verbose: true
+
     
   - repo: https://github.com/pycqa/pylint
     rev: v3.2.7
     hooks:
       - id: pylint
-        args:
-          - "--init-hook=import os, sys; sys.path.insert(0, '.'); os.environ.setdefault('DJANGO_SETTINGS_MODULE','mysite.settings'); import django; django.setup()"
-          - "--load-plugins=pylint_django"
-          - "--django-settings-module=mysite.settings"
-          - "--enable=all"
-          - "--max-nested-blocks=5"
-          - "--max-branches=12"
-          - "--max-statements=50"
+        args: ["--rcfile=.pylintrc"]
         additional_dependencies:
           - django
           - pylint-django
           - pytest
           - pyyaml
-        exclude: (^migrations/.*|^static/.*|^media/.*|^dist/.*|^build/.*)
+
 
 
 
@@ -90,6 +84,7 @@ repos:
         language: system
         pass_filenames: false
         stages: [pre-push]
+        always_run: true
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.10.0   # chọn version mypy phù hợp
