--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -11,5 +11,6 @@ jobs:
       - uses: github/codeql-action/init@v3
         with:
           languages: python
+          queries: +security-and-quality
       - uses: github/codeql-action/autobuild@v3
       - uses: github/codeql-action/analyze@v3
