--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -12,5 +12,7 @@ jobs:
         with:
           languages: python
           queries: +security-and-quality
+          exclude: | 
+            py/unused-loop-variable 
       - uses: github/codeql-action/autobuild@v3
       - uses: github/codeql-action/analyze@v3
