--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,6 +13,6 @@ jobs:
           languages: python
           queries: +security-and-quality
           exclude: | 
-            py/unused-loop-variable 
+            py/unused local variable 
       - uses: github/codeql-action/autobuild@v3
       - uses: github/codeql-action/analyze@v3
