--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: github/codeql-action/init@v3
         with:
           languages: python
-          queries: security-and-quality   # Giữ nguyên để thêm quality rules
+          queries: security-and-quality  
           config: |
             query-filters:
               - exclude:
