--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -21,4 +21,4 @@ jobs:
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v7
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR}}
+          SONAR_TOKEN: ${{ secrets.django_key}}
