--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -9,16 +9,16 @@ on:
 permissions:
   contents: read
 
-jobs:
-  sonar:
-    name: quality / sonarcloud
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+# jobs:
+#   sonar:
+#     name: quality / sonarcloud
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
+#         with:
+#           fetch-depth: 0
 
-      - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v7
-        env:
-          SONAR_TOKEN: ${{ secrets.django_key}}
+#       - name: SonarQube Scan
+#         uses: SonarSource/sonarqube-scan-action@v7
+#         env:
+#           SONAR_TOKEN: ${{ secrets.django_key}}
