--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,15 +2,15 @@ default_stages: [pre-commit]
 
 repos:
   # 1) Formatter check-only: YAPF
-  - repo: local
-    hooks:
-      - id: yapf-check
-        name: "yapf: check format (no auto-fix)"
-        entry: yapf --diff --style .style.yapf
-        language: python
-        additional_dependencies: ["yapf==0.43.0"]
-        types: [python]
-        exclude: ^(.*\/migrations\/|static\/|media\/|dist\/|build\/)
+  # - repo: local
+  #   hooks:
+  #     - id: yapf-check
+  #       name: "yapf: check format (no auto-fix)"
+  #       entry: yapf --diff --style .style.yapf
+  #       language: python
+  #       additional_dependencies: ["yapf==0.43.0"]
+  #       types: [python]
+  #       exclude: ^(.*\/migrations\/|static\/|media\/|dist\/|build\/)
 
   # 2) Linter: Ruff
   - repo: https://github.com/astral-sh/ruff-pre-commit
@@ -56,26 +56,6 @@ repos:
         entry: bash -lc "gitleaks protect --staged --redact --verbose --config .gitleaks.toml"
         language: system
 
-
-    # 5) Custom rules (team)
-  - repo: local
-    hooks:
-      - id: check-no-print
-        name: "custom: forbid print() in production"
-        entry: python tools/local-gate/check_no_print.py --config tools/local-gate/rules.yaml
-        language: python
-        additional_dependencies: ["pyyaml==6.0.2"]
-        types: [python]
-        exclude: ^(.*\/migrations\/|static\/|media\/|dist\/|build\/)
-
-      - id: check-max-nested
-        name: "custom: không quá 3 mức if/for/while lồng"
-        entry: python tools/local-gate/check_max_nested.py
-        language: python
-        types: [python]
-        exclude: "tests/|tools/local-gate/"
-        args: ["--config=tools/local-gate/rules.yaml", "--max-depth=2"]  # ← THÊM
- 
   - repo: local
     hooks:
       - id: pytest-pre-push
