--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
           fetch-depth: 1  
       - name: Run gitleaks scan
         uses: gitleaks/gitleaks-action@v2
+        with: 
+          args: detect --redact --no-git --source .
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
