--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Run gitleaks scan
         uses: gitleaks/gitleaks-action@v2
         with: 
-          args: detect --redact --no-git --source .
+          args: detect --redact --no-git --source . --report-format=sarif --report-path=results.sarif --exit-code=2 -v
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
